Added updated nginx docker image.

--- a/docker/nginx/alpine/Dockerfile
+++ b/docker/nginx/alpine/Dockerfile
@@ -1,19 +1,21 @@
-ARG     NGINX_VERSION=${NGINX_VERSION:-1.17}
+ARG         NGINX_VERSION=${NGINX_VERSION:-1.17}
 
-FROM    nginx:${NGINX_VERSION}-alpine
+FROM        nginx:${NGINX_VERSION}-alpine
 
-LABEL   maintainer="Mage2click, Dmitry Shkoliar @shkoliar"
+LABEL       maintainer="Mage2click, Dmitry Shkoliar @shkoliar"
 
-COPY    conf/nginx.conf /etc/nginx/nginx.conf
-COPY    conf/conf.d/default.conf /etc/nginx/conf.d/default.conf
+ENV         UID=1000
+ENV         GID=1000
 
-RUN     addgroup -S -g 1000 app && \
-        adduser -S -g 1000 -u 1000 -h /var/www -s /bin/ash app && \
-        touch /var/run/nginx.pid && \
-        mkdir /sock && \
-    	chown -R app:app /var/cache/nginx /var/run/nginx.pid \
-    		/etc/nginx/nginx.conf /etc/nginx/conf.d /sock
+COPY        conf/nginx.conf /etc/nginx/nginx.conf
+COPY        conf/conf.d/default.conf /etc/nginx/conf.d/default.conf
+COPY        bin/docker-entrypoint /nginx
 
-USER    app:app
+RUN         apk --no-cache add shadow && \
+            addgroup -S -g 1000 app && \
+            adduser -S -g 1000 -u 1000 -h /var/www -s /bin/ash app && \
+            chmod +x /nginx
 
-WORKDIR /var/www/html
+ENTRYPOINT  /nginx
+
+WORKDIR     /var/www/html
