--- a/docker/nginx/alpine/conf/nginx.conf
+++ b/docker/nginx/alpine/conf/nginx.conf
@@ -1,5 +1,7 @@
 worker_processes auto;
 
+user app;
+
 error_log /var/log/nginx/error.log debug;
 pid /var/run/nginx.pid;
 
@@ -14,7 +16,7 @@ http {
     log_format main
         '$remote_addr - $remote_user [$time_local] "$request" '
         '$status $body_bytes_sent "$http_referer" '
-        '"$http_user_agent" "$http_x_forwarded_for"';
+        '"$http_user_agent" "$http_x_forwarded_for" "$upstream_addr"';
 
     access_log /var/log/nginx/access.log main;
 
