Mutagen sync fixes.

--- a/.m2c/local/mutagen/mutagen.yml
+++ b/.m2c/local/mutagen/mutagen.yml
@@ -18,6 +18,7 @@ sync:
         - .idea
         - .vscode
         - .m2c
+        - .env
         - /bin
         - /generated
         - /pub/media/catalog/product
