added sockets php extension

--- a/docker/php/7.3/fpm/debian/Dockerfile
+++ b/docker/php/7.3/fpm/debian/Dockerfile
@@ -48,6 +48,7 @@ RUN         curl -sL https://deb.nodesource.com/setup_${NODE_VERSION}.x | bash \
                 bcmath \
                 gd \
                 intl \
+                sockets \
                 opcache \
                 pdo_mysql \
                 soap \
