Updated php 7.2 alpine xdebug docker image.

--- a/docker/php/7.2/fpm-xdebug/alpine/Dockerfile
+++ b/docker/php/7.2/fpm-xdebug/alpine/Dockerfile
@@ -1,76 +1,78 @@
-FROM    alpine:3.8
+FROM        alpine:3.9
 
-LABEL   maintainer="Mage2click, Dmitry Shkoliar @shkoliar"
+LABEL       maintainer="Mage2click, Dmitry Shkoliar @shkoliar"
 
-ARG     PHP_VERSION=${PHP_VERSION:-"7.2.22-r0"}
+ENV         UID=1000
+ENV         GID=1000
 
-COPY    common/conf-xdebug/php.ini /etc/php7/conf.d/
-COPY    common/conf-xdebug/php-fpm.conf /etc/php7/
-COPY    common/conf-xdebug/supervisor.conf /etc/
-COPY    common/bin/* /usr/local/bin/
+COPY        conf/php.ini /etc/php7/conf.d/
+COPY        conf/php-fpm.d/zz-docker.conf /etc/php7/php-fpm.d/
+COPY        bin/docker-entrypoint /php-fpm
+COPY        bin/prompt /etc/profile.d/prompt.sh
 
-RUN     apk update && \
-        apk add --no-cache \
-            php7=${PHP_VERSION} \
-            php7-bcmath=${PHP_VERSION} \
-            php7-calendar=${PHP_VERSION} \
-            php7-ctype=${PHP_VERSION} \
-            php7-curl=${PHP_VERSION} \
-            php7-dom=${PHP_VERSION} \
-            php7-fpm=${PHP_VERSION} \
-            php7-gd=${PHP_VERSION} \
-            php7-gettext=${PHP_VERSION} \
-            php7-iconv=${PHP_VERSION} \
-            php7-intl=${PHP_VERSION} \
-            php7-json=${PHP_VERSION} \
-            php7-mbstring=${PHP_VERSION} \
-            php7-mysqli=${PHP_VERSION} \
-            php7-opcache=${PHP_VERSION} \
-            php7-openssl=${PHP_VERSION} \
-            php7-pdo_mysql=${PHP_VERSION} \
-            php7-simplexml=${PHP_VERSION} \
-            php7-soap=${PHP_VERSION} \
-            php7-sockets=${PHP_VERSION} \
-            php7-sodium=${PHP_VERSION} \
-            php7-tokenizer=${PHP_VERSION} \
-            php7-xml=${PHP_VERSION} \
-            php7-xmlwriter=${PHP_VERSION} \
-            php7-xsl=${PHP_VERSION} \
-            php7-zip=${PHP_VERSION} \
-            php7-amqp \
-            php7-mcrypt \
-            php7-redis \
-            php7-ssh2 \
-            php7-xdebug \
-            curl \
-            gzip \
-            lsof \
-            supervisor && \
-        \
-        \
-        sed -i -e 's/^;zend_extension/\zend_extension/g' /etc/php7/conf.d/xdebug.ini && \
-        \
-        \
-        rm -rf /var/cache/apk/* && \
-        rm -rf /tmp/* && \
-        \
-        \
-        addgroup -g 1000 -S app && \
-        adduser -u 1000 -S app -G app -h /var/www -s /bin/sh && \
-        \
-        \
-        mkdir -p /var/www/html /var/www/.config /sock && \
-        touch /var/spool/cron/crontabs/app && \
-        chown -R app:app /var/www/html /var/www/.config \
-            /etc/php7/conf.d /sock /var/log && \
-        chmod +x /usr/local/bin/docker-host /usr/local/bin/docker-php-entrypoint && \
-        \
-        \
-        ln -sf /usr/sbin/php-fpm7 /usr/sbin/php-fpm && \
-        ln -sf /etc/init.d/php-fpm7 /etc/init.d/php-fpm
+RUN         apk update && \
+            apk add --no-cache \
+                php7 \
+                php7-bcmath \
+                php7-calendar \
+                php7-ctype \
+                php7-curl \
+                php7-dom \
+                php7-fpm \
+                php7-gd \
+                php7-gettext \
+                php7-iconv \
+                php7-intl \
+                php7-json \
+                php7-mbstring \
+                php7-mysqli \
+                php7-opcache \
+                php7-openssl \
+                php7-phar \
+                php7-pdo_mysql \
+                php7-simplexml \
+                php7-soap \
+                php7-sockets \
+                php7-sodium \
+                php7-tokenizer \
+                php7-xml \
+                php7-xmlwriter \
+                php7-xsl \
+                php7-zip \
+                php7-pecl-amqp \
+                php7-pecl-igbinary \
+                php7-pecl-mcrypt \
+                php7-pecl-redis \
+                php7-pecl-ssh2 \
+                php7-pecl-xdebug \
+                curl \
+                bash \
+                busybox-suid \
+                gnupg \
+                gzip \
+                lsof && \
+            \
+            \
+            sed -i -e 's/^;zend_extension/\zend_extension/g' /etc/php7/conf.d/xdebug.ini && \
+            \
+            \
+            rm -rf /var/cache/apk/* && \
+            rm -rf /tmp/* && \
+            \
+            \
+            addgroup -g 1000 -S app && \
+            adduser -u 1000 -S app -G app -h /var/www -s /bin/bash && \
+            \
+            \
+            mkdir -p /var/www/html /var/www/.config /var/www/.npm /sock && \
+            \
+            \
+            ln -sf /usr/sbin/php-fpm7 /usr/sbin/php-fpm && \
+            ln -sf /etc/init.d/php-fpm7 /etc/init.d/php-fpm && \
+            \
+            \
+            chmod +x /php-fpm
 
-ENTRYPOINT ["docker-php-entrypoint"]
+ENTRYPOINT  /php-fpm
 
-WORKDIR /var/www/html
-
-CMD     docker-host; supervisord -c /etc/supervisor.conf
+WORKDIR     /var/www/html
