--- a/docker/php/7.3/fpm-xdebug/alpine/Dockerfile
+++ b/docker/php/7.3/fpm-xdebug/alpine/Dockerfile
@@ -50,6 +50,7 @@ RUN         apk update && \
                 busybox-suid \
                 gnupg \
                 gzip \
+                htop \
                 lsof && \
             \
             \
