--- a/docker/php/7.3/fpm/alpine/Dockerfile
+++ b/docker/php/7.3/fpm/alpine/Dockerfile
@@ -53,6 +53,7 @@ RUN         apk update && \
                 git \
                 gnupg \
                 gzip \
+                htop \
                 lsof \
                 npm && \
             \
