Added openssh to 7.3 and 7.2 php images

--- a/docker/php/7.2/fpm/alpine/Dockerfile
+++ b/docker/php/7.2/fpm/alpine/Dockerfile
@@ -54,6 +54,7 @@ RUN         apk update && \
                 gnupg \
                 gzip \
                 htop \
+                openssh \
                 lsof \
                 npm && \
             \
