--- a/docker/php/7.2/fpm-xdebug/alpine/Dockerfile
+++ b/docker/php/7.2/fpm-xdebug/alpine/Dockerfile
@@ -51,6 +51,7 @@ RUN         apk update && \
                 gnupg \
                 gzip \
                 htop \
+                openssh \
                 lsof && \
             \
             \
