Updated php 7.0 alpine docker image

--- a/docker/php/7.0/fpm/alpine/Dockerfile
+++ b/docker/php/7.0/fpm/alpine/Dockerfile
@@ -1,51 +1,157 @@
-FROM    php:7.0-fpm-alpine
+FROM        php:7.0-fpm-alpine
 
-LABEL   maintainer="Mage2click, Dmitry Shkoliar @shkoliar"
+LABEL       maintainer="Mage2click, Dmitry Shkoliar @shkoliar"
 
-ARG     PHPREDIS_VERSION=${PHPREDIS_VERSION:-4.3.0}
-ARG     AMQP_VERSION=${AMQP_VERSION:-1.9.4}
-ARG     SSH2_VERSION=${SSH2_VERSION:-1.1.2}
+ENV         COMPOSER_ALLOW_SUPERUSER=1
+ENV         UID=1000
+ENV         GID=1000
+ENV         NODE_VERSION=10
 
-ENV     COMPOSER_ALLOW_SUPERUSER=1
+COPY        conf/php.ini /usr/local/etc/php/
+COPY        conf/php-fpm.d/zz-docker.conf /usr/local/etc/php-fpm.d/
+COPY        bin/docker-entrypoint /php-fpm
+COPY        bin/prompt /etc/profile.d/prompt.sh
 
-COPY    common/conf/php.ini /usr/local/etc/php/
-COPY    common/conf/*.conf /usr/local/etc/
-COPY    common/bin/docker-host /usr/local/bin/
+RUN         apk update && \
+            apk add --no-cache \
+                curl \
+                bash \
+                busybox-suid \
+                git \
+                gnupg \
+                gzip \
+                openssh \
+                lsof \
+                nodejs-npm \
+                wget \
+                icu-dev \
+                freetype-dev \
+                libzip-dev \
+                libpng-dev \
+                libxml2-dev \
+                libedit-dev \
+                readline-dev \
+                gettext-dev \
+                libxslt-dev \
+                libssh2-dev \
+                rabbitmq-c-dev \
+                libjpeg-turbo-dev \
+                libsodium-dev \
+                libmcrypt-dev && \
+            \
+            \
+            docker-php-ext-configure gd \
+                --with-freetype-dir=/usr/include/ \
+                --with-jpeg-dir=/usr/include/ && \
+            docker-php-ext-configure zip \
+                --with-libzip && \
+            docker-php-ext-install \
+                bcmath \
+                calendar \
+                dom \
+                gd \
+                gettext \
+                iconv \
+                intl \
+                json \
+                mbstring \
+                mcrypt \
+                opcache \
+                pdo_mysql \
+                simplexml \
+                soap \
+                sockets \
+                tokenizer \
+                xml \
+                xmlwriter \
+                xsl \
+                zip && \
+            \
+            \
+            apk add --no-cache --virtual \
+                .build-deps ${PHPIZE_DEPS} && \
+            \
+            \
+            pecl config-set php_ini \
+                /usr/local/etc/php/php.ini && \
+            yes '' | pecl install --onlyreqdeps \
+                amqp-1.9.4 \
+                igbinary \
+                libsodium \
+                redis-4.3.0 \
+                ssh2-1.1.2 && \
+            \
+            \
+            docker-php-ext-enable \
+                amqp \
+                igbinary \
+                redis \
+                sodium \
+                ssh2 && \
+            \
+            \
+            curl -sSL https://getcomposer.org/installer | php -- \
+                --install-dir=/usr/local/bin --filename=composer && \
+            \
+            \
+            curl -sSL -o /usr/local/bin/n98-magerun https://files.magerun.net/n98-magerun.phar && \
+            chmod +x /usr/local/bin/n98-magerun && \
+            \
+            \
+            curl -sSL -o /usr/local/bin/n98-magerun2 https://files.magerun.net/n98-magerun2.phar && \
+            chmod +x /usr/local/bin/n98-magerun2 && \
+            \
+            \
+            npm install -g n grunt-cli && \
+            \
+            \
+            apk del .build-deps \
+                icu-dev \
+                freetype-dev \
+                libzip-dev \
+                libpng-dev \
+                libxml2-dev \
+                libedit-dev \
+                readline-dev \
+                gettext-dev \
+                libxslt-dev \
+                libssh2-dev \
+                rabbitmq-c-dev \
+                libjpeg-turbo-dev \
+                libsodium-dev \
+                libmcrypt-dev && \
+            \
+            \
+            apk add --no-cache \
+                icu \
+                freetype \
+                libzip \
+                libpng \
+                libxml2 \
+                libedit \
+                readline \
+                gettext \
+                libxslt \
+                libssh2 \
+                rabbitmq-c \
+                libjpeg-turbo \
+                libsodium \
+                libmcrypt \
+            \
+            \
+            rm -rf /var/cache/apk/* && \
+            rm -rf /tmp/* && \
+            \
+            \
+            addgroup -g 1000 -S app && \
+            adduser -u 1000 -S app -G app -h /var/www -s /bin/bash && \
+            \
+            \
+            mkdir -p /var/www/html /var/www/.config /var/www/.npm /sock && \
+            \
+            \
+            chmod +x /php-fpm
 
-RUN     apk add --no-cache busybox-suid \
-            icu-dev freetype-dev libzip-dev libpng-dev libxml2-dev libedit-dev readline-dev \
-            gettext-dev libxslt-dev libssh2-dev rabbitmq-c-dev libjpeg-turbo-dev libmcrypt-dev \
-            bash git lsof nodejs-npm supervisor && \
-        docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ && \
-        docker-php-ext-configure zip --with-libzip && \
-        docker-php-ext-install \
-            bcmath gd intl mbstring opcache readline gettext \
-            calendar mcrypt pdo_mysql mysqli soap xsl zip && \
-        apk add --no-cache --virtual .build-deps ${PHPIZE_DEPS} && \
-        yes '' | pecl install --onlyreqdeps igbinary \
-            redis-${PHPREDIS_VERSION} amqp-${AMQP_VERSION} ssh2-${SSH2_VERSION} && \
-        docker-php-ext-enable igbinary redis amqp ssh2 && \
-        set -ex && cd /tmp && \
-        curl -O https://files.magerun.net/n98-magerun2.phar && \
-        mv n98-magerun2.phar /usr/local/bin/ && \
-        chmod +x /usr/local/bin/n98-magerun2.phar && \
-        apk del .build-deps && \
-        curl -sS https://getcomposer.org/installer | \
-            php -- --install-dir=/usr/local/bin --filename=composer && \
-        rm -rf /var/cache/apk/* && \
-        rm -rf /tmp/* && \
-        addgroup -g 1000 -S app && \
-        adduser -u 1000 -S app -G app -h /var/www -s /bin/bash && \
-        echo 'export PS1="\w $ "' > /var/www/.bashrc && \
-        mkdir -p /var/www/.config /var/www/.npm /sock /usr/local/var/log /var/log && \
-        touch /usr/local/var/log/php-fpm.log /var/spool/cron/crontabs/app && \
-        chown -R app:app /var/www/html /var/www/.bashrc /var/www/.config \
-            /var/www/.npm /usr/local/etc/php/conf.d /sock /usr/local/var/log/php-fpm.log \
-            /usr/local/bin/n98-magerun2.phar /var/log && \
-        chmod +x /usr/local/bin/docker-host && \
-        ln -sf /var/www/html/node_modules/grunt/bin/grunt /usr/bin/grunt && \
-        ln -sf /usr/local/bin/n98-magerun2.phar /usr/local/bin/n98-magerun2
+ENTRYPOINT  /php-fpm
 
-WORKDIR /var/www/html
-
-CMD     docker-host; supervisord -c /usr/local/etc/supervisor.conf
+WORKDIR     /var/www/html
