Updated php 7.1 alpine docker images

--- a/docker/php/7.1/fpm/alpine/Dockerfile
+++ b/docker/php/7.1/fpm/alpine/Dockerfile
@@ -20,6 +20,7 @@ RUN         apk update && \
                 git \
                 gnupg \
                 gzip \
+                openssh \
                 lsof \
                 nodejs-npm \
                 wget \
