--- a/.m2c/local/docker/docker-compose.yml
+++ b/.m2c/local/docker/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   php:
     container_name: ${M2C_CFG_DOMAIN_NAME}__php
     hostname: ${M2C_CFG_DOMAIN_NAME}__php
-    image: mage2click/m2c:php-fpm-${M2C_CFG_PHP:-7.2}
+    image: mage2click/m2c:php-fpm-${M2C_CFG_PHP:-7.3}-alpine
     extra_hosts:
       - ${M2C_CFG_DOMAIN_NAME}:${M2C_TRAEFIK_IP:-0.0.0.0}
     depends_on:
@@ -19,7 +19,7 @@ services:
   xdebug:
     container_name: ${M2C_CFG_DOMAIN_NAME}__xdebug
     hostname: ${M2C_CFG_DOMAIN_NAME}__xdebug
-    image: mage2click/m2c:php-fpm-${M2C_CFG_PHP:-7.2}-xdebug
+    image: mage2click/m2c:php-fpm-${M2C_CFG_PHP:-7.3}-xdebug-alpine
     extra_hosts:
       - ${M2C_CFG_DOMAIN_NAME}:${M2C_TRAEFIK_IP:-0.0.0.0}
     environment:
