--- a/docker/nginx/alpine/conf/nginx.conf
+++ b/docker/nginx/alpine/conf/nginx.conf
@@ -1,12 +1,12 @@
-worker_processes 2;
-
 user app;
+
+worker_processes auto;
 
 error_log /var/log/nginx/error.log debug;
 pid /var/run/nginx.pid;
 
 events {
-    worker_connections 1048576;
+    worker_connections 768;
 }
 
 http {
@@ -22,8 +22,8 @@ http {
 
     sendfile on;
 
-    #tcp_nopush on;
-    #gzip on;
+    tcp_nopush on;
+    tcp_nodelay on;
 
     keepalive_timeout 65;
 
