Added php fileinfo extension to docker images

--- a/docker/php/7.0/fpm-xdebug/alpine/Dockerfile
+++ b/docker/php/7.0/fpm-xdebug/alpine/Dockerfile
@@ -47,6 +47,7 @@ RUN         apk update && \
                 gettext \
                 iconv \
                 intl \
+                fileinfo \
                 json \
                 mbstring \
                 opcache \
