--- a/docker/php/7.0/fpm/alpine/Dockerfile
+++ b/docker/php/7.0/fpm/alpine/Dockerfile
@@ -53,6 +53,7 @@ RUN         apk update && \
                 gettext \
                 iconv \
                 intl \
+                fileinfo \
                 json \
                 mbstring \
                 mcrypt \
