--- a/docker/php/7.1/fpm-xdebug/alpine/Dockerfile
+++ b/docker/php/7.1/fpm-xdebug/alpine/Dockerfile
@@ -48,6 +48,7 @@ RUN         apk update && \
                 gettext \
                 iconv \
                 intl \
+                fileinfo \
                 json \
                 mbstring \
                 opcache \
