--- a/docker/php/7.3/fpm/alpine/Dockerfile
+++ b/docker/php/7.3/fpm/alpine/Dockerfile
@@ -20,6 +20,7 @@ RUN         apk update && \
                 php7-ctype \
                 php7-curl \
                 php7-dom \
+                php7-fileinfo \
                 php7-fpm \
                 php7-gd \
                 php7-gettext \
