--- a/.m2c/local/docker/docker-compose.nginx.yml
+++ b/.m2c/local/docker/docker-compose.nginx.yml
@@ -4,7 +4,6 @@ services:
 
   nginx:
     container_name: ${M2C_CFG_DOMAIN_NAME}__nginx
-    hostname: ${M2C_CFG_DOMAIN_NAME}__nginx
     image: mage2click/m2c:nginx-${M2C_CFG_NGINX:-1.17}-alpine
     depends_on:
       - db
@@ -14,5 +13,9 @@ services:
       - traefik.port=8080
       - traefik.frontend.rule=Host:${M2C_CFG_DOMAIN_NAME}${M2C_CFG_EXTRA_DOMAIN_NAMES}
     networks:
-      - m2c
-      - default
+      default:
+        aliases:
+          - nginx.${M2C_CFG_DOMAIN_NAME}
+      m2c:
+        aliases:
+          - nginx.${M2C_CFG_DOMAIN_NAME}
