Updated php7.3 Debian based docker image

--- a/docker/php/7.3/fpm/debian/Dockerfile
+++ b/docker/php/7.3/fpm/debian/Dockerfile
@@ -7,82 +7,48 @@ ENV         UID=1000
 ENV         GID=1000
 ENV         NODE_VERSION=10
 
+COPY        --from=mlocati/php-extension-installer /usr/bin/install-php-extensions /usr/bin
+
 COPY        conf/php.ini /usr/local/etc/php/
 COPY        conf/php-fpm.d/zz-docker.conf /usr/local/etc/php-fpm.d/
 COPY        bin/docker-entrypoint /php-fpm
 COPY        bin/prompt /etc/profile.d/prompt.sh
 
-RUN         curl -sSL https://deb.nodesource.com/setup_${NODE_VERSION}.x | bash && \
-            apt-get update && \
-            apt-get install -y --no-install-recommends \
-                bash \
-                cron \
-                git \
-                gnupg \
-                gzip \
-                inetutils-ping \
-                iproute2 \
-                lsof \
-                nodejs \
-                wget \
-                libfreetype6-dev \
-                libjpeg62-turbo-dev \
-                libmcrypt-dev \
-                libpng-dev \
-                librabbitmq-dev \
-                libsodium-dev \
-                libssh2-1-dev \
-                libxslt-dev \
-                libzip-dev && \
-            \
-            \
-            docker-php-ext-configure \
-                gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ && \
-            docker-php-ext-configure \
-                gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ && \
-            docker-php-ext-configure \
-                zip --with-libzip && \
-            \
-            \
-            docker-php-ext-install -j$(nproc) \
+RUN         install-php-extensions \
+                amqp \
                 bcmath \
                 calendar \
-                dom \
                 gd \
                 gettext \
-                iconv \
+                igbinary \
                 intl \
-                json \
-                mbstring \
+                mcrypt \
+                mysqli \
                 opcache \
                 pdo_mysql \
-                simplexml \
+                redis \
                 soap \
                 sockets \
-                sodium \
-                tokenizer \
-                xml \
-                xmlwriter \
+                ssh2 \
                 xsl \
                 zip && \
             \
             \
-            pecl install igbinary-3.0.1 && \
-            pecl install mcrypt-1.0.3 && \
-            pecl install redis-5.1.0 && \
-            pecl install amqp-1.9.4 && \
-            \
-            \
-            wget https://pecl.php.net/get/ssh2 -O /tmp/ssh2-1.2.tgz && \
-            pear install /tmp/ssh2-1.2.tgz && \
-            \
-            \
-            docker-php-ext-enable \
-                amqp \
-                igbinary \
-                mcrypt \
-                redis \
-                ssh2 && \
+            curl -sSL https://deb.nodesource.com/setup_${NODE_VERSION}.x | bash && \
+            apt-get update && \
+            apt-get install -y --no-install-recommends \
+                cron \
+                git \
+                gnupg \
+                gzip \
+                htop \
+                inetutils-ping \
+                iproute2 \
+                lsof \
+                nodejs \
+                ssh \
+                wget \
+                yarn && \
             \
             \
             curl -sSL https://getcomposer.org/installer | php -- \
@@ -101,6 +67,9 @@ RUN         curl -sSL https://deb.nodesource.com/setup_${NODE_VERSION}.x | bash 
             chmod +x /usr/local/bin/mhsendmail && \
             \
             \
+            npm install -g n grunt-cli && \
+            \
+            \
             rm -rf /tmp/* && \
             rm -rf /var/lib/apt/lists/* && \
             \
@@ -109,7 +78,7 @@ RUN         curl -sSL https://deb.nodesource.com/setup_${NODE_VERSION}.x | bash 
             useradd -g 1000 -u 1000 -d /var/www -s /bin/bash app && \
             \
             \
-            npm install -g n grunt-cli && \
+            mkdir -p /var/www/html /var/www/.config /var/www/.npm /sock && \
             \
             \
             chmod +x /php-fpm
