--- a/.m2c/local/mutagen/mutagen.yml
+++ b/.m2c/local/mutagen/mutagen.yml
@@ -18,7 +18,7 @@ sync:
         - .idea
         - .vscode
         - .m2c
-        - .env
+        - /.env
         - /bin
         - /generated
         - /pub/media/catalog/product
