Updated php7.1 Debian based docker images

--- a/docker/php/7.1/fpm/debian/Dockerfile
+++ b/docker/php/7.1/fpm/debian/Dockerfile
@@ -2,100 +2,89 @@ FROM        php:7.1-fpm
 
 LABEL       maintainer="Mage2click, Dmitry Shkoliar @shkoliar"
 
-ENV         PHP_EXTRA_CONFIGURE_ARGS="--enable-fpm --with-fpm-user=app --with-fpm-group=app --disable-cgi"
 ENV         COMPOSER_ALLOW_SUPERUSER=1
 ENV         UID=1000
 ENV         GID=1000
 ENV         NODE_VERSION=10
 
-COPY        common/conf/php.ini /usr/local/etc/php/
-COPY        common/conf/php-fpm.d/zz-docker.conf /usr/local/etc/php-fpm.d/
-COPY        common/bin/docker-entrypoint /php-fpm
+COPY        --from=mlocati/php-extension-installer /usr/bin/install-php-extensions /usr/bin
 
-RUN         curl -sL https://deb.nodesource.com/setup_${NODE_VERSION}.x | bash \
-            && apt-get update \
-            && apt-get install -y --no-install-recommends \
-                bash \
+COPY        conf/php.ini /usr/local/etc/php/
+COPY        conf/php-fpm.d/zz-docker.conf /usr/local/etc/php-fpm.d/
+COPY        bin/docker-entrypoint /php-fpm
+COPY        bin/prompt /etc/profile.d/prompt.sh
+
+RUN         install-php-extensions \
+                amqp \
+                bcmath \
+                calendar \
+                gd \
+                gettext \
+                igbinary \
+                intl \
+                mcrypt \
+                mysqli \
+                opcache \
+                pdo_mysql \
+                redis \
+                soap \
+                sockets \
+                ssh2 \
+                xsl \
+                zip && \
+            \
+            \
+            curl -sSL https://deb.nodesource.com/setup_${NODE_VERSION}.x | bash && \
+            apt-get update && \
+            apt-get install -y --no-install-recommends \
                 cron \
                 git \
+                gnupg \
                 gzip \
+                htop \
                 inetutils-ping \
                 iproute2 \
                 lsof \
                 nodejs \
-                wget \
-                libfreetype6-dev \
-                libjpeg62-turbo-dev \
-                libmcrypt-dev \
-                libpng-dev \
-                librabbitmq-dev \
-                libsodium-dev \
-                libssh2-1-dev \
-                libxslt-dev \
-                libzip-dev \
+                ssh \
+                sudo \
+                wget && \
             \
             \
-            && docker-php-ext-configure \
-                gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
-            && docker-php-ext-configure \
-                gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
-            && docker-php-ext-configure \
-                zip --with-libzip \
+            curl -sSL https://getcomposer.org/installer | php -- \
+                --install-dir=/usr/local/bin --filename=composer && \
             \
             \
-            && docker-php-ext-install -j$(nproc) \
-                bcmath \
-                gd \
-                intl \
-                mcrypt \
-                opcache \
-                pdo_mysql \
-                soap \
-                xsl \
-                zip \
+            curl -sSL -o /usr/local/bin/n98-magerun https://files.magerun.net/n98-magerun.phar && \
+            chmod +x /usr/local/bin/n98-magerun && \
             \
             \
-            && pecl install libsodium \
-            && pecl install igbinary-3.0.1 \
-            && pecl install redis-5.1.0 \
-            && pecl install amqp-1.9.4 \
+            curl -sSL -o /usr/local/bin/n98-magerun2 https://files.magerun.net/n98-magerun2.phar && \
+            chmod +x /usr/local/bin/n98-magerun2 && \
             \
             \
-            && wget https://pecl.php.net/get/ssh2 -O /tmp/ssh2-1.2.tgz \
-            && pear install /tmp/ssh2-1.2.tgz \
+            curl -sSL -o /usr/local/bin/mhsendmail https://github.com/mailhog/mhsendmail/releases/download/v0.2.0/mhsendmail_linux_amd64 && \
+            chmod +x /usr/local/bin/mhsendmail && \
             \
             \
-            && docker-php-ext-enable \
-                amqp \
-                igbinary \
-                redis \
-                sodium \
-                ssh2 \
+            npm install -g n grunt-cli && \
             \
             \
-            && curl -sS https://getcomposer.org/installer | php -- \
-                --install-dir=/usr/local/bin --filename=composer \
+            rm -rf /tmp/* && \
+            rm -rf /var/lib/apt/lists/* && \
             \
             \
-            && curl -sS -o /usr/local/bin/n98-magerun2 https://files.magerun.net/n98-magerun2.phar \
-            && chmod +x /usr/local/bin/n98-magerun2 \
+            groupadd -g 1000 app && \
+            useradd -g 1000 -u 1000 -d /var/www -s /bin/bash app && \
             \
             \
-            && curl -sS -o /usr/local/bin/n98-magerun https://files.magerun.net/n98-magerun.phar \
-            && chmod +x /usr/local/bin/n98-magerun \
+            echo "app ALL=NOPASSWD: ALL" >> /etc/sudoers && \
             \
             \
-            && chmod +x /php-fpm \
-            && rm -rf /tmp/* \
-            && rm -rf /var/lib/apt/lists/* \
+            mkdir -p /var/www/html /var/www/.config /var/www/.npm /sock && \
             \
             \
-            && groupadd -g 1000 app \
-            && useradd -g 1000 -u 1000 -d /var/www -s /bin/bash app \
-            && echo 'PS1="\w $ "' > /var/www/.bashrc \
-            \
-            \
-            && npm install -g n grunt-cli
+            chmod +x /php-fpm
 
 ENTRYPOINT  /php-fpm
 
